--- a/index.html
+++ b/index.html
@@ -294,9 +294,7 @@
             <label for="colorSpeedSlider">Animation:</label>
             <input type="range" id="colorSpeedSlider" class="speed-slider" min="0.1" max="3" step="0.1" value="1" style="width: 100px;">
             <span id="colorSpeedValue">1.0x</span>
-        </div>
-    </div>    <script type="module" src="src/main.js"></script>
+        </div>    </div>    <script type="module" src="src/main.js"></script>
     <script type="module" src="src/fullscreen.js"></script>
-    <script src="debug-ball-disappearance.js"></script>
 </body>
 </html>
